pulled updated server from AWS ubuntu machine

--- a/start/index.html
+++ b/start/index.html
@@ -124,9 +124,11 @@ style="width:auto;">Create New Account</button>
 	<div id="videospace" class="screen">
 		<br><img id="video" alt="Sorry, the sheep appear to be sleeping now, no games at this time" width=450px height=250px" ></img>
 	</div>
+	<div>
 	<iframe id ="unity" src="logo.png" class="game";
 style="border:0px #000000 none;" name="Game name" scrolling="no" frameborder="1" marginheight="px"
- marginwidth="320px" height="320px" width="480px"></iframe>
+ marginwidth="320px" height="480px" width="480px"></iframe>
+ 	</div>
 </div><br>
 
 <div id="buttons" class="sidebyside">
